clusters/cluster1/kubernetes/apps/auth/oauth2-proxy/app/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy
  namespace: auth
spec:
  hostnames:
    - auth.biggs.dog
  parentRefs:
    - name: wildcard-biggs-dog
      namespace: networking
  rules:
    - backendRefs:
        - name: oauth2-proxy
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
